// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Rating should render five stars 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.5rem;
  color: #585858;
}

.c2 {
  color: #798186;
  margin-left: 10px;
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <p
    class="c2"
  >
    (undefined votes)
  </p>
</div>
`;

exports[`Component: Rating should render four stars 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.5rem;
  color: #585858;
}

.c2 {
  color: #798186;
  margin-left: 10px;
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <p
    class="c2"
  >
    (undefined votes)
  </p>
</div>
`;

exports[`Component: Rating should render one star 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.5rem;
  color: #585858;
}

.c2 {
  color: #798186;
  margin-left: 10px;
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <p
    class="c2"
  >
    (undefined votes)
  </p>
</div>
`;

exports[`Component: Rating should render three stars 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.5rem;
  color: #585858;
}

.c2 {
  color: #798186;
  margin-left: 10px;
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <p
    class="c2"
  >
    (undefined votes)
  </p>
</div>
`;

exports[`Component: Rating should render two stars 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.5rem;
  color: #585858;
}

.c2 {
  color: #798186;
  margin-left: 10px;
}

<div
  class="c0"
>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <i
    class="c1 material-icons"
  >
    star_outline
  </i>
  <p
    class="c2"
  >
    (undefined votes)
  </p>
</div>
`;
